--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,18 @@ addons:
 services:
   - docker
 
+
+cache:
+  directories:
+    - docker-cache
+
 before_script:
+  - |
+    filename=docker-cache/saved_images.tar
+    if [[ -f "$filename" ]]; then docker load < "$filename"; fi
+    mkdir -p docker-cache
     docker pull heltai/dealii:v9.1.1-gcc-mpi
+    docker save -o "$filename" heltai/dealii:v9.1.1-gcc-mpi
 
 script:
 - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
