--- a/.travis.yml
+++ b/.travis.yml
@@ -13,20 +13,10 @@ addons:
 services:
   - docker
 
-
-cache:
-  directories:
-    - docker-cache
-
 before_script:
-  - |
-    filename=docker-cache/saved_images.tar
-    if [[ -f "$filename" ]]; then docker load < "$filename"; fi
-    mkdir -p docker-cache
     docker pull heltai/dealii:v9.1.1-gcc-mpi
-    docker save -o "$filename" heltai/dealii:v9.1.1-gcc-mpi
 
 script:
 - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"
-- sudo docker run heltai/dealii:v9.1.1-gcc-mpi /bin/sh -c "git clone https://github.com/SGauvin/lethe && cd lethe && git checkout $BRANCH && mkdir build && cd build && cmake ../ -DCMAKE_BUILD_TYPE=Release && make -j2 && ctest --verbose"
+- sudo docker run heltai/dealii:v9.1.1-gcc-mpi /bin/sh -c "git clone https://github.com/SGauvin/lethe && cd lethe && git checkout $BRANCH && mkdir build && cd build && cmake ../ -DCMAKE_BUILD_TYPE=Release && make -j2 && ctest -j2 --verbose"
