--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 language: cpp
 
 os: linux
@@ -32,17 +31,17 @@ matrix:
       env: COMPILE_AND_TEST=yes
 
 before_script:
-  - if [ "$COMPILE_AND_TEST" = "yes" ]
+  - if [ "$COMPILE_AND_TEST" = "yes" ]; then
       docker pull heltai/dealii:v9.1.1-gcc-mpi
     fi
 
 script:
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
   - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"
-  - if [ "$COMPILE_AND_TEST" = "yes" ]
+  - if [ "$COMPILE_AND_TEST" = "yes" ]; then
       docker run heltai/dealii:v9.1.1-gcc-mpi /bin/sh -c "git clone https://github.com/SGauvin/lethe && cd lethe && git checkout $BRANCH && mkdir build && cd build && cmake ../ -DCMAKE_BUILD_TYPE=Release && make -j2 && ctest -j"
     fi
-  - if [ "$STATIC_CHECKS" = "yes" ]
+  - if [ "$STATIC_CHECKS" = "yes" ]; then
       python run-clang-format.py -r source
       python run-clang-format.py -r include
     fi
