--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
   include:
     - name: Static checks (clang-format)
       stage: check
-      env: STATIC_CHECKS=yes
+      env: STEP=static_check
       addons:
         apt:
           sources:
@@ -28,21 +28,21 @@ matrix:
 
     - name: Compile and ctest
       stage: build
-      env: COMPILE_AND_TEST=yes
+      env: STEP=compile_and_test
 
 before_script:
-  - if [ "$COMPILE_AND_TEST" = "yes" ]; then
+  - if [ "$STEP" = "compile_and_test" ]; then
       docker pull heltai/dealii:v9.1.1-gcc-mpi
     fi
 
 script:
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
   - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"
-  - if [ "$STATIC_CHECKS" = "yes" ]; then
+  - if [ "$STEP" = "static_check" ]; then
       python run-clang-format.py -r source &&
       python run-clang-format.py -r include
     fi
-  - if [ "$COMPILE_AND_TEST" = "yes" ]; then
+  - if [ "$STEP" = "compile_and_test" ]; then
       docker run heltai/dealii:v9.1.1-gcc-mpi /bin/sh -c "git clone https://github.com/SGauvin/lethe && cd lethe && git checkout $BRANCH && mkdir build && cd build && cmake ../ -DCMAKE_BUILD_TYPE=Release && make -j2 && ctest -j"
     fi
  
