--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,7 @@ script:
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
   - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"
   - if [ "$STEP" = "static_check" ]; then
-      python run-clang-format.py -r source &&
-      python run-clang-format.py -r include;
+      python contrib/utilities/run-clang-format.py -r source include;
     fi
   - if [ "$STEP" = "compile_and_test" ]; then
       docker run heltai/dealii:v9.1.1-gcc-mpi /bin/sh -c "git clone https://github.com/SGauvin/lethe && cd lethe && git checkout $BRANCH && mkdir build && cd build && cmake ../ -DCMAKE_BUILD_TYPE=Release && make -j2 && ctest -j";
